--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,9 @@ a {
 
 /* header including nav links, socials icons and opening text */
 .header {
-background-image: url(assets/images/banner.png);
-background-size: 100vw;
-height: 50vw;
+    background-image: url(assets/images/banner.png);
+    background-size: 100vw;
+    height: 50vw;
 
 }
 
@@ -43,9 +43,9 @@ height: 50vw;
 }
 
 .icons .icon {
-width: 2.5vw;
-height: 2.5vw;
-padding: 3px;
+    width: 2.5vw;
+    height: 2.5vw;
+    padding: 3px;
 }
 
 /* mobile view icons */
@@ -60,12 +60,13 @@ padding: 3px;
     align-items: center;
     position: absolute;
 }
+
 .navbar .navlink {
     padding: 5px;
     font-size: 1.5vw;
     font-family: Bayon;
     cursor: pointer;
-    
+
 }
 
 .navbar .navlink1 {
@@ -74,11 +75,11 @@ padding: 3px;
     font-family: Bayon;
     cursor: pointer;
     color: #03767b;
-    
+
 }
 
 .navbar .logo {
-        width: 6vw;
+    width: 6vw;
 }
 
 /* opening text */
@@ -122,7 +123,7 @@ padding: 3px;
 }
 
 .heading .headingTag {
-    font-size: min(3.5vw, 35px);
+    font-size: min(5vw, 50px);
     font-family: AudioWide;
     color: #03767b;
     padding: 5px;
@@ -131,7 +132,7 @@ padding: 3px;
 }
 
 .heading .headingText {
-    font-size: min(3.8vw, 38px);
+    font-size: min(5.5vw, 55px);
     font-family: AudioWide;
     color: #ffffff;
     padding: 5px;
@@ -142,11 +143,20 @@ padding: 3px;
 /* about me text */
 .paragraph {
     position: static;
-    font-size: min(1.5vw, 20px);
+    font-size: min(2.5vw, 30px);
     font-family: Bayon;
     color: #adadad;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    text-align: center;
+    margin-bottom: 0%;
+}
+
+.paragraph a {
+    position: static;
+    font-size: min(2.5vw, 30px);
+    font-family: Bayon;
+    color: #03767b;
     text-align: center;
 }
 
@@ -169,7 +179,8 @@ padding: 3px;
 
 .big_picture_heading {
     position: static;
-    font-size: min(2.5vw, 25px);;
+    font-size: min(2.5vw, 30px);
+    ;
     font-family: Bayon;
     color: #ffffff;
     padding-right: 20px;
@@ -182,7 +193,7 @@ padding: 3px;
     padding-top: 0%;
     margin-top: 0%;
     position: static;
-    font-size: min(1.5vw, 20px);
+    font-size: min(2vw, 25px);
     font-family: Bayon;
     color: #adadad;
     padding-right: 20px;
@@ -194,24 +205,43 @@ padding: 3px;
     flex: 1;
     flex-wrap: wrap;
     display: grid;
-    grid-template-columns : repeat(3,0.25fr);
+    grid-template-columns: repeat(3, 10vw);
     grid-template-rows: repeat(4, 8vw);
     grid-gap: 10px;
+    padding-bottom: 10px;
 }
 
 .grid_image {
-    width:80%;
-    height:80%;
-    object-fit:contain;
-  }
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.grid_text {
+    position: static;
+    font-size: min(1.5vw, 15px);
+    font-family: Bayon;
+    color: #adadad;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    margin-bottom: 0%;
+}
 
 /* projects section */
 
 .projects {
-    background-image: url(assets/images/projects_section.png);
+    background-color: #ffffff;
     background-size: 100vw;
-
     align-items: center;
+}
+
+.projects_title {
+    background-image: url(assets/images/projects_section.png);
+    width: 100vw;
+    background-size: cover;
+    align-items: center;
+    padding-top: 5vw;
 }
 
 /* heading text */
@@ -220,7 +250,7 @@ padding: 3px;
     position: static;
     justify-content: center;
     width: 90vw;
-    padding-top: 5vw;
+    padding-top: 10vw;
     margin-bottom: 0%;
     padding-bottom: 0%;
     margin-left: auto;
@@ -228,7 +258,7 @@ padding: 3px;
 }
 
 .projects .heading .headingTag {
-    font-size: min(3.5vw, 35px);
+    font-size: min(5vw, 50px);
     font-family: AudioWide;
     color: #03767b;
     padding: 5px;
@@ -237,22 +267,37 @@ padding: 3px;
 }
 
 .projects .heading .headingText {
-    font-size: min(3.8vw, 38px);
+    font-size: min(5.5vw, 55px);
     font-family: AudioWide;
     color: #171717;
     padding: 5px;
     margin-bottom: 0%;
-    padding-bottom: 0%;;
+    padding-bottom: 0%;
+    ;
 }
 
 /* projects grid to display projects */
 
+.projects_content {
+    background-image: url(assets/images/experience.png);
+    width: 100vw;
+    padding-bottom: 0px;
+    align-items: center;
+    background-size: contain;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    border-bottom: none;
+}
+
 .project_grid {
+    padding: 0%;
     display: grid;
-    grid-template-columns: repeat(2, 40vw);
+    grid-template-columns: repeat(2, 45vw);
     margin: auto;
     gap: 2vw;
-    width: 80vw;
+    width: 100vw;
+    justify-content: center;
+    padding-bottom: 20vw;
 }
 
 /* by project */
@@ -279,30 +324,34 @@ padding: 3px;
 
 .Project_text h4 {
     margin-bottom: 0px;
-    font-size: min(2.5vw, 25px);
+    font-size: min(3vw, 30px);
+}
+
+/* transition image */
+
+.transition_image {
+    width: 100vw;
 }
 
 /* project about text */
 
 .Project_text p {
     margin-top: 0px;
-    font-size: min(2vw, 20px);
+    font-size: min(2.5vw, 25px);
 }
 
 /* img for the project */
 
 .project_image {
-    width: min(12vw, 80px);
-    height: min(12vw, 80px);
-    padding: 3px;
+    width: max(15vw, 20px);
+    height: max(15vw, 20px);
 }
 
 /* Experience section */
 
 .experience {
-    background-image: url(assets/images/experience.png);
     background-size: 100vw;
-
+    background-color: #171717;
     align-items: center;
 }
 
@@ -312,7 +361,6 @@ padding: 3px;
     position: static;
     justify-content: center;
     width: 90vw;
-    padding-top: 22vw;
     margin-bottom: 0%;
     padding-bottom: 0%;
     margin-left: auto;
@@ -320,29 +368,30 @@ padding: 3px;
 }
 
 .experience .heading .headingTag {
-    font-size: min(3.5vw, 35px);
+    font-size: min(5vw, 50px);
     font-family: AudioWide;
     color: #03767b;
-    padding: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
     margin-bottom: 0%;
     padding-bottom: 0%;
 }
 
 .experience .heading .headingText {
-    font-size: min(3.8vw, 38px);
+    font-size: min(5.5vw, 55px);
     font-family: AudioWide;
     color: #ffffff;
-    padding: 5px;
     margin-bottom: 0%;
     padding-bottom: 0%;
 }
 
 .place_grid {
     display: grid;
-    grid-template-columns: repeat(2, 40vw);
+    grid-template-columns: repeat(2, 45vw);
     margin: auto;
     gap: 2vw;
-    width: 80vw;
+    width: 100vw;
+    justify-content: center;
 }
 
 /* by project */
@@ -350,7 +399,6 @@ padding: 3px;
 .place {
     display: flex;
     align-items: center;
-    padding: 2vw;
     text-align: center;
     width: 40vw;
     cursor: pointer;
@@ -370,28 +418,28 @@ padding: 3px;
 
 .Place_text h4 {
     margin-bottom: 0px;
-    font-size: min(2.5vw, 25px);
+    font-size: min(3vw, 30px);
 }
 
 /* project about text */
 
 .Place_text p {
     margin-top: 0px;
-    font-size: min(2vw, 20px);
+    font-size: min(2.5vw, 25px);
 }
 
 /* img for the project */
 
 .place_image {
-    width: min(12vw, 80px);
-    height: min(12vw, 80px);
-    padding: 3px;
+    width: max(15vw, 20px);
+    height: max(15vw, 20px);
+    padding-left: 5px;
 }
 
 /* footer of links */
 .footer {
     background-color: #171717;
-    height: 8vw;
+    height: max(8vw, 30px);
     align-items: center;
 }
 
@@ -406,9 +454,10 @@ padding: 3px;
 }
 
 .footer_icons .footer_icon {
-width: 2.5vw;
-height: 2.5vw;
-padding-right: 5px;
+    width: 2.5vw;
+    height: 2.5vw;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 /* footer image */
@@ -417,8 +466,9 @@ padding-right: 5px;
     float: right;
 }
 
-  /* to change the amount in a row depending on the screen width */
-  @media screen and (max-width: 1000px) {
+/* to change the amount in a row depending on the screen width */
+@media screen and (max-width: 1000px) {
+
     /* switches about section horizontal */
     .SkillsandBigPicture {
         display: inline-block;
@@ -427,15 +477,49 @@ padding-right: 5px;
         align-items: center;
         width: 100vw;
     }
+
     .skillsGrid {
-    flex: 1;
-    flex-wrap: wrap;
-    display: grid;
-    justify-content: center;
-    grid-template-columns : repeat(3,0.25fr);
-    grid-template-rows: repeat(4, 8vw);
-    grid-gap: 10px;
+        flex: 1;
+        flex-wrap: wrap;
+        display: grid;
+        justify-content: center;
+        grid-template-columns: repeat(3, 0.25fr);
+        grid-template-rows: repeat(4, 8vw);
+        grid-gap: 10px;
     }
+
+    /* makes the project images vertical */
+    .project {
+        display: inline-block;
+        align-items: center;
+        padding: 2vw;
+        padding-top: 0%;
+        text-align: center;
+        width: 45vw;
+        cursor: pointer;
+    }
+
+    .project_image {
+        width: max(25vw, 40px);
+        height: max(25vw, 40px);
+    }
+
+    /* makes the experience vertical */
+    .place {
+        display: inline-block;
+        align-items: center;
+        padding: 2vw;
+        text-align: center;
+        width: 40vw;
+        cursor: pointer;
+    }
+
+    .place_image {
+        width: max(25vw, 40px);
+        height: max(25vw, 40px);
+        padding-left: 5px;
+    }
+
     /* makes icons invisble */
     .icons {
         display: none !important;
