--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,7 @@ a {
     flex-wrap: wrap;
     display: grid;
     grid-template-columns: repeat(3, 10vw);
-    grid-template-rows: repeat(4, 8vw);
+    grid-template-rows: repeat(5, 8vw);
     grid-gap: 10px;
     padding-bottom: 10px;
 }
@@ -422,6 +422,18 @@ a {
     height: max(15vw, 20px);
 }
 
+
+/* skills list for experience and projects */
+
+.skills_list {
+    display: grid;
+    grid-template-columns: repeat(5, 4vw);
+}
+
+.skills_list img {
+    width: 100%;
+}
+
 /* Experience section */
 
 .experience {
@@ -559,7 +571,7 @@ a {
         display: grid;
         justify-content: center;
         grid-template-columns: repeat(3, 0.25fr);
-        grid-template-rows: repeat(4, 8vw);
+        grid-template-rows: repeat(5, 8vw);
         grid-gap: 10px;
     }
 
