--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,15 @@
     display: none;
 }
 
+/* Color Variables */
+:root {
+    --primary-color: #03767b;
+    --secondary-color: #171717;
+    --tertiary-color: #ffffff;
+    --accent-color: #adadad;
+    --highlight-color: #10d0d6;
+}
+
 html body {
     overscroll-behavior: none;
 }
@@ -13,7 +22,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-y: scroll;
-    background-color: #ffffff;
+    background-color: var(--tertiary-color);
 }
 
 /* fonts */
@@ -74,7 +83,7 @@ a {
     font-size: 1.5vw;
     font-family: Bayon;
     cursor: pointer;
-    color: #03767b;
+    color: var(--primary-color);
 }
 
 .navbar .logo {
@@ -106,7 +115,7 @@ a {
 /* about section including about me text and skills logos */
 
 .about {
-    background-color: #171717;
+    background-color: var(--secondary-color);
     display: flex;
     flex-direction: column;
 }
@@ -126,7 +135,7 @@ a {
 .heading .headingTag {
     font-size: min(4vw, 2.5rem);
     font-family: AudioWide;
-    color: #03767b;
+    color: var(--primary-color);
     padding: 0.3rem;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -135,7 +144,7 @@ a {
 .heading .headingText {
     font-size: min(4.5vw, 2.8125rem);
     font-family: AudioWide;
-    color: #ffffff;
+    color: var(--tertiary-color);
     padding: 0.3rem;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -146,7 +155,7 @@ a {
     position: static;
     font-size: min(1.5vw, 1.25rem);
     font-family: Bayon;
-    color: #adadad;
+    color: var(--accent-color);
     padding-left: 10vw;
     padding-right: 10vw;
     text-align: center;
@@ -157,7 +166,7 @@ a {
     position: static;
     font-size: min(1.5vw, 1.25rem);
     font-family: Bayon;
-    color: #03767b;
+    color: var(--primary-color);
     text-align: center;
 }
 
@@ -184,7 +193,7 @@ a {
     position: static;
     font-size: min(1.5vw, 1.25rem);
     font-family: Bayon;
-    color: #03767b;
+    color: var(--primary-color);
     padding-right: 20px;
     text-align: left;
     padding-bottom: 0;
@@ -203,7 +212,7 @@ a {
     position: static;
     font-size: min(1.5vw, 1.25rem);
     font-family: Bayon;
-    color: #ffffff;
+    color: var(--tertiary-color);
     text-align: left;
     margin: 0;
 }
@@ -212,7 +221,7 @@ a {
     position: static;
     font-size: min(1vw, 0.9375rem);
     font-family: Bayon;
-    color: #adadad;
+    color: var(--accent-color);
     text-align: left;
     margin: 0;
     padding-left: 0.5vw;
@@ -222,7 +231,7 @@ a {
     position: static;
     font-size: min(1.25vw, 1rem);
     font-family: Bayon;
-    color: #adadad;
+    color: var(--accent-color);
     padding-right: 20px;
     text-align: left;
     margin: 0;
@@ -236,7 +245,7 @@ a {
     position: static;
     font-size: min(1.5vw, 1.25rem);
     font-family: Bayon;
-    color: #03767b;
+    color: var(--primary-color);
     padding-right: 5px;
     text-align: left;
     padding-bottom: 0;
@@ -283,7 +292,7 @@ a {
     opacity: 0;
     font-size: min(1.5vw, 0.9375rem);
     font-family: Bayon;
-    color: #adadad;
+    color: var(--accent-color);
     text-align: center;
     transition: opacity 0.3s ease;
 }
@@ -312,7 +321,7 @@ a {
 .quote_button_left {
     font-size: min(6vw, 3.75rem);
     font-family: AudioWide;
-    color: #03767b;
+    color: var(--primary-color);
     margin-top: 0;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -325,7 +334,7 @@ a {
 .quote_button_right {
     font-size: min(6vw, 3.75rem);
     font-family: AudioWide;
-    color: #03767b;
+    color: var(--primary-color);
     margin-top: 0;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -344,21 +353,21 @@ a {
     position: static;
     font-size: min(4vw, 2.5rem);
     font-family: Bayon;
-    color: #ffffff;
+    color: var(--tertiary-color);
     padding-left: 10vw;
     padding-right: 10vw;
     padding-bottom: 0;
     text-align: left;
     margin-bottom: 0;
     text-decoration: underline;
-    text-decoration-color: #03767b;
+    text-decoration-color: var(--primary-color);
 }
 
 .quotes h5 {
     position: static;
     font-size: min(2.2vw, 1.375rem);
     font-family: Bayon;
-    color: #ffffff;
+    color: var(--tertiary-color);
     padding-left: 5vw;
     padding-right: 5vw;
     text-align: left;
@@ -377,7 +386,7 @@ a {
     height: 4vw;
     border-radius: 50%;
     border-style: solid;
-    border-color: #03767b;
+    border-color: var(--primary-color);
     border-width: 2px;
 }
 
@@ -385,7 +394,7 @@ a {
     position: static;
     font-size: min(1vw, 0.9375rem);
     font-family: Bayon;
-    color: #adadad;
+    color: var(--accent-color);
     padding-right: 5vw;
     text-align: left;
     margin-bottom: 0;
@@ -394,7 +403,7 @@ a {
 /* projects section */
 
 .projects {
-    background-color: #ffffff;
+    background-color: var(--tertiary-color);
     background-size: 100vw;
     align-items: center;
     width: 100vw;
@@ -426,7 +435,7 @@ a {
 .projects .heading .headingTag {
     font-size: min(4vw, 2.5rem);
     font-family: AudioWide;
-    color: #10d0d6;
+    color: var(--highlight-color);
     padding: 0.3rem;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -435,7 +444,7 @@ a {
 .projects .heading .headingText {
     font-size: min(4.5vw, 2.8125rem);
     font-family: AudioWide;
-    color: #171717;
+    color: var(--secondary-color);
     padding: 0.3rem;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -479,7 +488,7 @@ a {
 /* projects text in general */
 
 .Project_text {
-    color: #171717;
+    color: var(--secondary-color);
     display: block;
     align-items: start;
     text-align: start;
@@ -522,7 +531,7 @@ a {
 
 .experience {
     background-size: 100vw;
-    background-color: #171717;
+    background-color: var(--secondary-color);
     align-items: center;
 }
 
@@ -541,7 +550,7 @@ a {
 .experience .heading .headingTag {
     font-size: min(4vw, 2.5rem);
     font-family: AudioWide;
-    color: #03767b;
+    color: var(--primary-color);
     padding-left: 0.3rem;
     padding-right: 0.3rem;
     margin-bottom: 0;
@@ -551,7 +560,7 @@ a {
 .experience .heading .headingText {
     font-size: min(4.5vw, 2.8125rem);
     font-family: AudioWide;
-    color: #ffffff;
+    color: var(--tertiary-color);
     margin-bottom: 0;
     padding-bottom: 0;
 }
@@ -582,7 +591,7 @@ a {
     align-items: start;
     text-align: start;
     font-family: Bayon;
-    color: #ffffff;
+    color: var(--tertiary-color);
 }
 
 /* projects heading */
@@ -609,7 +618,7 @@ a {
 
 /* footer of links */
 .footer {
-    background-color: #171717;
+    background-color: var(--secondary-color);
     height: max(8vw, 1.875rem);
     align-items: center;
 }
