--- a/styles.css
+++ b/styles.css
@@ -101,14 +101,14 @@ a {
 
 .bannerText h1 {
     font-family: AudioWide;
-    font-size: min(7vw, 4.375rem);
+    font-size: min(6vw, 4.5425rem);
     padding: 0;
     margin-bottom: 0;
 }
 
 .bannerText p {
     font-family: Bayon;
-    font-size: min(2.5vw, 1.5625rem);
+    font-size: min(2vw, 2.5345rem);
     margin-top: 0;
 }
 
@@ -405,18 +405,17 @@ a {
 .projects {
     background-color: var(--tertiary-color);
     background-size: 100vw;
-    align-items: center;
     width: 100vw;
 }
 
 .projects_title {
     background-image: url(assets/images/projects_section.png);
     width: 100vw;
-    background-size: cover;
+    background-size: 100vw;
     background-repeat: no-repeat;
     background-position: center;
-    align-items: center;
-    padding-top: 3vw;
+    height: calc(100vw / 4);
+    align-content: end;
 }
 
 /* heading text */
@@ -425,11 +424,6 @@ a {
     position: static;
     justify-content: center;
     width: 100vw;
-    padding-top: 10vw;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .projects .heading .headingTag {
@@ -454,6 +448,7 @@ a {
 
 .projects_content {
     background-image: url(assets/images/experience.png);
+
     width: 100vw;
     padding-bottom: 0;
     align-items: center;
