--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@
     --tertiary-color: #ffffff;
     --accent-color: #adadad;
     --highlight-color: #10d0d6;
+    /* background colours */
+    --background-primary: #ffffff;
+    --background-secondary: #171717;
+    /* text colours */
+    --text-primary: #171717;
+    --text-secondary: #ffffff;
+    --text-tertiary: #adadad;
 }
 
 html body {
@@ -22,7 +29,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-y: scroll;
-    background-color: var(--tertiary-color);
+    background-color: var(--background-primary);
 }
 
 /* fonts */
@@ -76,6 +83,7 @@ a {
     font-size: 1.5vw;
     font-family: Bayon;
     cursor: pointer;
+    color: var(--text-primary);
 }
 
 .navbar .navlink1 {
@@ -104,18 +112,20 @@ a {
     font-size: min(6vw, 4.5425rem);
     padding: 0;
     margin-bottom: 0;
+    color: var(--text-primary);
 }
 
 .bannerText p {
     font-family: Bayon;
     font-size: min(2vw, 2.5345rem);
     margin-top: 0;
+    color: var(--text-primary);
 }
 
 /* about section including about me text and skills logos */
 
 .about {
-    background-color: var(--secondary-color);
+    background-color: var(--background-secondary);
     display: flex;
     flex-direction: column;
 }
@@ -144,7 +154,7 @@ a {
 .heading .headingText {
     font-size: min(4.5vw, 2.8125rem);
     font-family: AudioWide;
-    color: var(--tertiary-color);
+    color: var(--text-secondary);
     padding: 0.3rem;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -155,7 +165,7 @@ a {
     position: static;
     font-size: min(1.5vw, 1.25rem);
     font-family: Bayon;
-    color: var(--accent-color);
+    color: var(--text-tertiary);
     padding-left: 10vw;
     padding-right: 10vw;
     text-align: center;
@@ -212,7 +222,7 @@ a {
     position: static;
     font-size: min(1.5vw, 1.25rem);
     font-family: Bayon;
-    color: var(--tertiary-color);
+    color: var(--text-secondary);
     text-align: left;
     margin: 0;
 }
@@ -221,7 +231,7 @@ a {
     position: static;
     font-size: min(1vw, 0.9375rem);
     font-family: Bayon;
-    color: var(--accent-color);
+    color: var(--text-tertiary);
     text-align: left;
     margin: 0;
     padding-left: 0.5vw;
@@ -231,7 +241,7 @@ a {
     position: static;
     font-size: min(1.25vw, 1rem);
     font-family: Bayon;
-    color: var(--accent-color);
+    color: var(--text-tertiary);
     padding-right: 20px;
     text-align: left;
     margin: 0;
@@ -292,7 +302,7 @@ a {
     opacity: 0;
     font-size: min(1.5vw, 0.9375rem);
     font-family: Bayon;
-    color: var(--accent-color);
+    color: var(--text-tertiary);
     text-align: center;
     transition: opacity 0.3s ease;
 }
@@ -359,6 +369,7 @@ a {
     padding-bottom: 0;
     text-align: left;
     margin-bottom: 0;
+    color: var(--text-secondary);
     text-decoration: underline;
     text-decoration-color: var(--primary-color);
 }
@@ -367,7 +378,7 @@ a {
     position: static;
     font-size: min(2.2vw, 1.375rem);
     font-family: Bayon;
-    color: var(--tertiary-color);
+    color: var(--text-secondary);
     padding-left: 5vw;
     padding-right: 5vw;
     text-align: left;
@@ -394,7 +405,7 @@ a {
     position: static;
     font-size: min(1vw, 0.9375rem);
     font-family: Bayon;
-    color: var(--accent-color);
+    color: var(--text-tertiary);
     padding-right: 5vw;
     text-align: left;
     margin-bottom: 0;
@@ -403,7 +414,7 @@ a {
 /* projects section */
 
 .projects {
-    background-color: var(--tertiary-color);
+    background-color: var(--background-primary);
     background-size: 100vw;
     width: 100vw;
 }
@@ -438,7 +449,7 @@ a {
 .projects .heading .headingText {
     font-size: min(4.5vw, 2.8125rem);
     font-family: AudioWide;
-    color: var(--secondary-color);
+    color: var(--text-secondary);
     padding: 0.3rem;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -483,7 +494,7 @@ a {
 /* projects text in general */
 
 .Project_text {
-    color: var(--secondary-color);
+    color: var(--text-secondary);
     display: block;
     align-items: start;
     text-align: start;
@@ -526,7 +537,7 @@ a {
 
 .experience {
     background-size: 100vw;
-    background-color: var(--secondary-color);
+    background-color: var(--background-secondary);
     align-items: center;
 }
 
@@ -555,7 +566,7 @@ a {
 .experience .heading .headingText {
     font-size: min(4.5vw, 2.8125rem);
     font-family: AudioWide;
-    color: var(--tertiary-color);
+    color: var(--text-secondary);
     margin-bottom: 0;
     padding-bottom: 0;
 }
@@ -586,7 +597,7 @@ a {
     align-items: start;
     text-align: start;
     font-family: Bayon;
-    color: var(--tertiary-color);
+    color: var(--text-secondary);
 }
 
 /* projects heading */
@@ -613,7 +624,7 @@ a {
 
 /* footer of links */
 .footer {
-    background-color: var(--secondary-color);
+    background-color: var(--background-secondary);
     align-items: center;
     width: 100vw;
     padding-top: 5vw;
@@ -634,7 +645,7 @@ a {
 
 .acknowledgemets p {
     font-size: min(1.5vw, 0.9375rem);
-    color: var(--tertiary-color);
+    color: var(--text-secondary);
     font-family: Bayon;
     display: inline-flex;
     padding-left: 1vw;
