--- a/404.css
+++ b/404.css
@@ -9,6 +9,7 @@ body {
     margin: 0px;
     padding: 0px;
     overflow-y: scroll;
+    overflow-x: hidden;
     background-color: #171717;
 }
 
@@ -28,81 +29,89 @@ a {
     text-decoration: none;
 }
 
-/* header including nav links, socials icons and opening text */
-.header {
-    
-    background-size: 100vw;
-    height: 50vw;
+body {
+      margin: 0;
+      padding: 0;
+      font-family: AudioWide;
+      background-color: #171717;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
 
-}
+    .container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 40px;
+      padding: 20px;
+      max-width: 1000px;
+      width: 100%;
+    }
 
-/* socials icons */
+    .logo {
+      max-width: 200px;
+      width: 100%;
+      height: auto;
+    }
 
-.icons {
-    padding-top: 1vw;
-    padding-left: 2vw;
-}
+    .text {
+      flex: 1;
+      text-align: left;
+    }
 
-.icons .icon {
-    width: 2.5vw;
-    height: 2.5vw;
-    padding: 3px;
-}
+    .text h1 {
+      font-size: 3.5rem;
+      margin: 0;
+    }
 
-/* mobile view icons */
+    .text h1 span {
+      color: #03767b;
+    }
 
+    .text p {
+      font-size: 1.3rem;
+      margin: 10px 0;
+    }
 
-/* nav bar links */
+    .text a {
+      font-size: 1.2rem;
+      color: #10cfd5;
+      text-decoration: underline;
+      word-break: break-all;
+    }
 
-.navbar {
-    top: 0.5vw;
-    right: 2vw;
-    display: inline-flex;
-    align-items: center;
-    position: absolute;
-}
+    .text a:hover {
+      color: #10cfd5;
+    }
 
-.navbar .navlink {
-    padding: 5px;
-    font-size: 1.5vw;
-    font-family: Bayon;
-    cursor: pointer;
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+        text-align: center;
+        gap: 20px;
+      }
 
-}
+      .text {
+        text-align: center;
+      }
 
-.navbar .navlink1 {
-    padding: 5px;
-    font-size: 1.5vw;
-    font-family: Bayon;
-    cursor: pointer;
-    color: #03767b;
+      .text h1 {
+        font-size: 2.5rem;
+      }
 
-}
+      .text p {
+        font-size: 1.1rem;
+      }
 
-.navbar .logo {
-    width: 6vw;
-}
+      .text a {
+        font-size: 1rem;
+      }
 
-/* opening text */
-
-.bannerText {
-    top: 10vw;
-    right: 2vw;
-    position: absolute;
-    text-align: right;
-}
-
-.bannerText h1 {
-    font-family: AudioWide;
-    font-size: min(7vw, 70px);
-    padding: 0%;
-    margin-bottom: 0%;
-    color: #ffffff;
-}
-
-.bannerText p {
-    font-family: Bayon;
-    font-size: min(2.5vw, 25px);
-    margin-top: 0%;
-    color: #ffffff;
-}
+      .logo {
+        max-width: 150px;
+      }
+    }
