--- a/pages/experience/style.css
+++ b/pages/experience/style.css
@@ -34,6 +34,17 @@ body {
     background-color: var(--background-secondary);
 }
 
+.paragraph {
+    position: static;
+    font-size: min(1.5vw, 1.25rem);
+    font-family: Bayon;
+    color: var(--text-tertiary);
+    padding-left: 10vw;
+    padding-right: 10vw;
+    text-align: center;
+    margin-bottom: 0;
+}
+
 /* fonts */
 
 @font-face {
